--- a/app/views/proyects/show.html.erb
+++ b/app/views/proyects/show.html.erb
@@ -7,17 +7,17 @@
 
 <p>
   <strong>Framework:</strong>
-  <%= @proyect.framework_id %>
+  <%= @proyect.framework.name %>
 </p>
 
 <p>
   <strong>Language:</strong>
-  <%= @proyect.language_id %>
+  <%= @proyect.language.name %>
 </p>
 
 <p>
   <strong>Skill:</strong>
-  <%= @proyect.skill_id %>
+  <%= @proyect.skill.name %>
 </p>
 
 <p>
