--- a/app/views/proyects/_form.html.erb
+++ b/app/views/proyects/_form.html.erb
@@ -12,6 +12,11 @@
     <%= f.input :imageurl %>
     <%= f.input :live_url %>
     <%= f.input :source_url %>
+    <div class="article-input image_upload"><%= f.file_field :image, class: 'form-control', direct_upload: true  %></div>
+    <div class="article-input image_upload"><%= f.file_field :image, class: 'form-control', direct_upload: true  %></div>
+    <div class="article-input image_upload"><%= f.file_field :image, class: 'form-control', direct_upload: true  %></div>
+    <div class="article-input image_upload"><%= f.file_field :image, class: 'form-control', direct_upload: true  %></div>
+    <div class="article-input image_upload"><%= f.file_field :image, class: 'form-control', direct_upload: true  %></div>
   </div>
 
   <div class="form-actions">
