--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,13 +1,13 @@
 
-<%= simple_form_for(@proyect) do |f| %>
+<%= simple_form_for(@project) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.association :framework %>
-    <%= f.association :language %>
-    <%= f.association :skill %>
+    <%= f.input :name, input_html: {class: 'input is-info'}%>
+    <%= f.collection_check_boxes :framework_ids, Framework.all, :id, :name, input_html: {class: 'select'}, as: :check_boxes%>
+    <%= f.association :language,  as: :check_boxes %>
+    <%= f.association :skill,  as: :check_boxes %>
     <%= f.input :other %>
     <%= f.input :imageurl %>
     <%= f.input :live_url %>
