--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -21,9 +21,9 @@
     <% @projects.each do |project| %>
       <tr>
         <td><%= project.name %></td>
-        <td><%= project.framework_id %></td>
-        <td><%= project.language_id %></td>
-        <td><%= project.skill_id %></td>
+        <td><%= project.framework_ids %></td>
+        <td><%= project.language_ids%></td>
+        <td><%= project.skill_ids %></td>
         <td><%= project.other %></td>
         <td><%= project.imageurl %></td>
         <td><%= project.live_url %></td>
